--- a/index1.html
+++ b/index1.html
@@ -44,7 +44,7 @@
   </div>
 
                <p id="cap">
-                <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+                <div class="g-recaptcha" data-sitekey="6LeAMUorAAAAAN7z8jHggKFCxjAHCiqOAH-35v9R"></div>
                 </p> 
                 <!--<p class="acciones"><input type="submit" value="enviar" onclick="enviar()"  /></p>-->
 
