--- a/index1.html
+++ b/index1.html
@@ -43,9 +43,9 @@
    <input textarea type="text" name="mensaje" id="mensaje">
   </div>
 
-               <p id="cap">
-                <div class="g-recaptcha" data-sitekey="6LeAMUorAAAAAN7z8jHggKFCxjAHCiqOAH-35v9R"></div>
-                </p> 
+               
+                <div class="g-recaptcha" data-sitekey="6LeAMUorAAAAAN7z8jHggKFCxjAHCiqOAH-35v9R" id="cap"></div>
+                
                 <!--<p class="acciones"><input type="submit" value="enviar" onclick="enviar()"  /></p>-->
 
             <button onclick= "enviar()" id="button" value="Send Email" >enviar</button>
