--- a/index1.html
+++ b/index1.html
@@ -90,7 +90,8 @@ document.getElementById('form')
         !nombre || !email || !asunto || !mensaje || recaptchaResponse === ""
         )
         {
-            alert ("complete los datos")
+            alert ("complete los datos");
+            return;
             
         }
 
