--- a/index1.html
+++ b/index1.html
@@ -115,7 +115,7 @@ document.getElementById('form')
       alert ("ponga un email correcto")
     });
 
-     const formData= new formData(form);
+     const formData= new FormData(form);
      const script= "https://script.google.com/macros/s/AKfycbz1MWhmkYkz36cCJGO5kPKBV0ve_jEmrt0lFfSHGaFJGEeh1WvNNL6r-hmd-RcH8UA_/exec"
      fetch(script, {
          method:"POST",
