--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
      <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="pagina de venta javascript.js"></script>
+    
     <title>PcOne</title>
 </head>
 <body id="paginaP">
     <h1>Accesorios de Pc</h1>
     <div id="consultas">
     <button>
-        <a href="index1.html">CONSULTAS POR EMAIL</a>
+        <a href="index final (ponele).html">CONSULTAS POR EMAIL</a>
     </button>
     </div>
     <footer>
