--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Accesorios de Pc</h1>
     <div id="consultas">
     <button>
-        <a href="index final (ponele).html">CONSULTAS POR EMAIL</a>
+        <a href="index 1.html">CONSULTAS POR EMAIL</a>
     </button>
     </div>
     <footer>
